--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>Eyeballing</title>
     <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
-    <script src="index.js"></script>
   </head>
   <body>
+    <div id="app"></div>
+    <script src="index.js"></script>
   </body>
 </html>
